# sip-protocol

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COLLECTIVE_DECISION_DESIGN.md  CONTRIBUTING.md  FIXES_SUMMARY.md  FIX_SUMMARY.md  HERMES_CLAUDECODE_ADAPTER.md  LICENSE  README.md  TEST_REPORT.md  package-lock.json  package.json
python/: .gitignore  CONTRIBUTING.md  PYLINT_FIXES.md  generate_test_vectors.py  pyproject.toml  requirements-dev.txt  requirements.txt  sip_mcp_server_standalone.py  sip_protocol.py
python/examples/: basic_handshake.py  three_party_chat.py
python/src/: __init__.py
python/src/crypto/: aes_gcm.py  argon2.py  hkdf.py  xchacha20_poly1305.py
python/src/managers/: group.py  nonce.py  session.py
python/src/protocol/: __init__.py  decision.py  fragment.py  group.py  group_simple.py  handshake.py  message.py  offline_queue.py  persistence.py  rekey.py  resume.py  version.py
python/src/sip_protocol/: __init__.py  __main__.py  exceptions.py
python/src/sip_protocol/crypto/: __init__.py  aes_gcm.py  dh.py  hkdf.py  xchacha20_poly1305.py
python/src/sip_protocol/discovery/: __init__.py  agent_card.py  registry.py  registry_store.py
python/src/sip_protocol/file_transfer/: __init__.py  config.py  manager.py  manifest.py  store.py
python/src/sip_protocol/managers/: __init__.py  group.py  nonce.py
python/src/sip_protocol/protocol/: decision.py  group.py  group_simple.py  handshake.py  message.py  persistence.py  rekey.py  resume.py  version.py
python/src/sip_protocol/schema/: __init__.py  _utils.py  envelope.py  (+4 more)
python/src/transport/: __init__.py  base.py  encrypted_channel.py  hermes_claude_adapter.py  message.py  openclaw_adapter.py  sip_mcp_server.py  websocket_adapter.py
python/tests/: test_agent_card.py  test_decision.py  test_e2e_three_party.py  test_envelope.py  test_exceptions.py  test_file_transfer_config.py  test_file_transfer_integration.py  test_file_transfer_manager.py  test_file_transfer_manifest.py  test_file_transfer_store.py  test_group_correct.py  test_group_coverage.py  test_group_management.py  test_group_ratchet.py  test_hermes_claude_adapter.py  test_integration.py  test_mcp_server.py  test_nonce_coverage.py  test_offline_queue.py  test_p2_features.py  test_performance.py  test_persistence.py  test_registry.py  test_registry_store.py  test_rekey.py  test_rekey_e2e.py  test_schema.py  test_session.py  test_sip_protocol.py  test_transport.py  test_transport_base.py  test_triple_dh_handshake.py  test_version_negotiation.py  test_websocket_adapter.py
(+57 files in other folders)
